--- a/localfork/package.json
+++ b/localfork/package.json
@@ -12,6 +12,7 @@
     "@fun-wallet/sdk": "^0.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "crypto-js": "^4.1.1",
-    "ethers": "^6.0.5"
+    "ethers": "^6.0.5",
+    "hardhat": "^2.14.0"
   }
 }
